# cc-fw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.apache  LICENSE.bsd  LICENSE.gpl  LICENSE.mit  README.md  cmake-init.sh  cmake.sh  connect.gdb  debug.gdb  debug.sh  flash.gdb  flash.sh  jlink.sh  twr.JLinkScript
doc/: fcc.odt
fw/: CMakeLists.txt  config.cmake  fw.c
fw/board/: CMakeLists.txt
fw/board/captaincreek/: CMakeLists.txt  config.cmake  pin_mux.c
fw/board/captaincreek/include/: board.h  clock_config.h
fw/board/cloudchaser/: CMakeLists.txt  board.c  clock.c  clock_config.c  clock_config.h  config.cmake  led.c  lp5562.c  pin_mux.c  pin_mux.h  pins.c  pins.h
fw/board/cloudchaser/include/: board.h  clock_config.h  led.h
fw/board/cloudchaser/include/board/: board.h  clock.h  led.h  trace.h
fw/board/frdm_k22f/: CMakeLists.txt  board.c  config.cmake  pin_mux.c
fw/board/frdm_k66f/: CMakeLists.txt  board.c  clock_config.c  config.cmake  pin_mux.c
fw/board/frdm_k66f/include/: board.h  clock_config.h
fw/board/twr_k65f180m/: CMakeLists.txt  board.c  config.cmake  pin_mux.c
fw/board/twr_k65f180m/include/: board.h  clock_config.h
fw/core/: CMakeLists.txt
fw/core/board/: CMakeLists.txt
fw/core/board/cloudchaser/: CMakeLists.txt  clock_config.c  config.cmake  pin_mux.c
fw/core/board/cloudchaser/include/: clock_config.h
fw/core/board/frdm_k22f/: CMakeLists.txt  config.cmake
fw/core/board/frdm_k66f/: CMakeLists.txt  config.cmake
fw/core/board/twr_k65f180m/: CMakeLists.txt  clock_config.c  config.cmake
fw/core/cmsis/: CMakeLists.txt
fw/core/cpu/: CMakeLists.txt
fw/core/cpu/mk22f51212/: CMakeLists.txt  MK22FN512xxx12_flash.ld
fw/core/cpu/mk22f51212/driver/: CMakeLists.txt
fw/core/cpu/mk65f18/: CMakeLists.txt
fw/core/cpu/mk65f18/driver/: CMakeLists.txt
fw/core/cpu/mk66f18/: CMakeLists.txt  MK66FX1M0xxx18_flash.ld
fw/core/cpu/mk66f18/driver/: CMakeLists.txt
fw/core/cpu/mk66f18/startup/: startup_MK66F18.S
fw/core/driver/: CMakeLists.txt
fw/core/freertos/: CMakeLists.txt
fw/core/middleware/: CMakeLists.txt
fw/core/middleware/dma_manager/: CMakeLists.txt
fw/core/middleware/usb/: CMakeLists.txt
fw/core/middleware/usb/device/: CMakeLists.txt
fw/core/middleware/usb/host/: CMakeLists.txt
fw/core/middleware/usb/include/: usb_misc.h
fw/core/middleware/usb/osa/: CMakeLists.txt
fw/core/middleware/usb/phy/: CMakeLists.txt
fw/core/util/: CMakeLists.txt
fw/freertos/: CMakeLists.txt
fw/freertos/include/: portable.h  task.h  umm_malloc_cfg.h
fw/freertos/portable/GCC/ARM_CM4F/: fsl_tickless_lptmr.c  fsl_tickless_systick.c  port.c
fw/freertos/portable/MemMang/: heap_3.c  heap_4.c  umm.c
fw/freertos/portable/MemMang/umm/: umm_malloc.c  umm_malloc.h
fw/kinetis/: CMakeLists.txt
fw/kinetis/cmsis/: CMakeLists.txt
fw/kinetis/cpu/: CMakeLists.txt
fw/kinetis/cpu/mk66f18/: CMakeLists.txt  MK66FN2M0xxx18_flash.ld  MK66FN2M0xxx18_ram.ld
fw/kinetis/cpu/mk66f18/cmsis/: MK66F18.h
fw/kinetis/cpu/mk66f18/driver/: CMakeLists.txt
fw/kinetis/cpu/mk66f18/startup/: startup_MK66F18.S  system.c
fw/kinetis/driver/: CMakeLists.txt  fsl_dspi.c  fsl_edma.c  fsl_ftfx_controller.c  fsl_i2c.c  fsl_rnga.c  fsl_uart.c
fw/kinetis/driver/include/: fsl_common.h  fsl_dspi.h  fsl_edma.h  fsl_ftfx_features.h  fsl_rnga.h
fw/kinetis/freertos/: CMakeLists.txt
fw/kinetis/middleware/dma_manager/: CMakeLists.txt  fsl_dma_manager.c
fw/kinetis/middleware/usb/: CMakeLists.txt
fw/kinetis/sdk/: CMakeLists.txt
fw/kinetis/sdk/driver/: CMakeLists.txt  fsl_common.c  fsl_sim.c
fw/lib/: CMakeLists.txt
fw/lib/ccrf/: CMakeLists.txt
fw/lib/ccrf/net/: mac.c  net.c
fw/lib/ccrf/phy/: chan.c  chan.h  config.h  phy.c  phy.h
fw/lib/ccrf/rdio/: cc1200.h  config.h  rdio.c  rdio.h  util.c  util.h
fw/lib/ccrf/sys/: amp.h  clock.h  isr.h  spi.h  timer.h  trace.h
fw/lib/fabi/: CMakeLists.txt  fabi.c  ftm.c  ftm.h
fw/lib/fabi/include/: fabi.h
fw/lib/kio/: .gitignore  CMakeLists.txt  flsh.c  iic.c  itm.c  pit.c  uart.c  uart.h
fw/lib/kio/usb/: composite.c  usb_device_descriptor.c  virtual_com.c
fw/lib/usr/: CMakeLists.txt  README.md  mbuf.c  serf.c
fw/project/: CMakeLists.txt
fw/project/cloudchaser/: CMakeLists.txt  ccio.c  ccio.h  cloudchaser.c  cloudchaser.h  config.cmake  console.c  console.h  fault.c  led.c  led.h  lp5562.c  lp5562.h  main.c  rf_uart.c  rf_uart.h
fw/project/cloudchaser/include/: FreeRTOSConfig.h
fw/project/cloudchaser/usb/: composite.c  usb_device_cdc_acm.c  virtual_com.c
fw/project/default/: CMakeLists.txt  config.cmake  main.bm.c  main.c
fw/project/default/include/: FreeRTOSConfig.h
fw/project/default/usb/: virtual_com.c
fw/project/default/usb.bm/: virtual_com.c
fw/project/hello/: CMakeLists.txt  config.cmake  main.c
fw/project/hello/include/: FreeRTOSConfig.h
fw/project/usb/: CMakeLists.txt  bno055.h  config.cmake  fault.c  main.c  serf.c  serf.h
fw/project/usb/include/: FreeRTOSConfig.h
fw/project/usb/usb/: composite.c  uhdcd.c  usb_device_cdc_acm.c  usb_device_descriptor.c  virtual_com.c
fw/project/usb_cdc/: virtual_com.c
fw/project/usb_cdc_freertos/: CMakeLists.txt
fw/project/usb_cdc_freertos/include/: usb_device_config.h
fw/project/usb_hid_generic_freertos/: CMakeLists.txt  config.cmake
fw/system/: CMakeLists.txt
fw/system/common/: CMakeLists.txt
fw/system/common/include/: type.h
fw/system/driver/: CMakeLists.txt
fw/system/driver/pca9685/: CMakeLists.txt
fw/system/driver/ssd1306/: CMakeLists.txt
fw/system/framework/trace/: CMakeLists.txt  trace.c  uart.c  uart_freertos.c
fw/system/lib/: CMakeLists.txt
fw/system/lib/ccrf/: CMakeLists.txt
fw/system/lib/fabi/: fabi.c
fw/system/lib/kio/: iic.c  iic.h  pit.c  sclk.c  uart.c  uart.h
fw/system/lib/libcc/: CMakeLists.txt
fw/system/lib/mcuc/: CMakeLists.txt
fw/system/lib/usr/: CMakeLists.txt  serf.c
fw/system/util/trace/: CMakeLists.txt
fw/system/util/uart/: CMakeLists.txt  uart.c  uart.h
fw_old/project/usb_cdc/: CMakeLists.txt  config.cmake
fw_old/project/usb_cdc/include/: usb_device_config.h
(+297 files in other folders)
